h1. CHANGELOG

h2. 1.5.5 unreleased

* display an error message when a recipe cannot be found (contributed by Jim Riordan)
* improve 'seed_database' recipe for Mongoid (prepare for Mongoid 3.0 release)
* update 'omniauth' recipe to add google-oauth2 support (contributed by Earl St Sauver)
* update 'html5' recipe for newer Skeleton installation (contributed by Andrew J Vargo)
* update gem 'zurb-foundation' from 3.0.2 to 3.0.3

h2. 1.5.4 July 3, 2012

* add 'unicorn' recipe (contributed by Michel Pavan Macedo)
* rollback gem 'mongoid-rspec' from 1.4.6 to 1.4.5 (contributed by Michel Pavan Macedo)
* improve 'guard' recipe (contributed by Michel Pavan Macedo)
* improve 'rspec' recipe to offer option of factory_girl or machinist (contributed by Michel Pavan Macedo)
* improve 'rails_admin' recipe to mount engine (contributed by ngottlieb)
* improve 'heroku' recipe (contributed by ngottlieb)
* update gem 'compass-rails' from 1.0.2 to 1.0.3
* update gem 'bootstrap-sass' from 2.0.3 to 2.0.4.0
* update gem 'zurb-foundation' to 3.0.2

h2. 1.5.3 June 26, 2012

* update 'prelaunch_signup' recipe with migration for 'opt-in' field
* update gem 'factory_girl_rails' from 3.3.0 to 3.5.0
* update gem 'cancan' from 1.6.7 to 1.6.8
* update gem 'compass' from 0.12.1 to 0.12.2
* update gem 'compass-rails' from 1.0.0 to 1.0.2
* update gem 'devise' from 2.1.0 to 2.1.2
* update gem 'mongoid-rspec' from 1.4.4 to 1.4.6

h2. 1.5.2 June 10, 2012

* add 'prelaunch_signup' recipe
* fix 'seed_database' recipe to apply migration for devise_invitable
* update 'devise' recipe to apply patch for problems with Rolify 3.1 and Mongoid
* revert 'devise' recipe to remove 'rolify 3.2.0.beta4' with Mongoid

h2. 1.5.1 June 8, 2012

* update 'devise' recipe to use 'rolify 3.2.0.beta4' with Mongoid
* update gem 'bson_ext' from 1.6.2 to 1.6.4
* update gem 'mongoid' from 2.4.10 to 2.4.11
* update gem 'devise_invitable' from 1.0.1 to 1.0.2
* update gem 'database_cleaner' from 0.7.2 to 0.8.0