@@ -51,8 +51,8 @@ RUBY
       gsub_file 'app/models/user.rb', /\bend\s*\Z/ do
   <<-RUBY
   # run 'rake db:mongoid:create_indexes' to create indexes
-  index :email, :unique => true
-  field :name
+  index({ email: 1 }, { unique: true, background: true })
+  field :name, :type => String
   validates_presence_of :name
   attr_accessible :name, :email, :password, :password_confirmation, :remember_me, :created_at, :updated_at
 end
