@@ -3,10 +3,12 @@ h1. CHANGELOG
 h2. 1.5.5 unreleased
 
 * display an error message when a recipe cannot be found (contributed by Jim Riordan)
-* improve 'seed_database' recipe for Mongoid (prepare for Mongoid 3.0 release)
+* update 'mongoid' 'omniauth' 'add_user' 'seed_database' recipes for Mongoid 3.0
+* update gem 'mongoid-rspec' from 1.4.5 to 1.4.6
 * update 'omniauth' recipe to add google-oauth2 support (contributed by Earl St Sauver)
 * update 'html5' recipe for newer Skeleton installation (contributed by Andrew J Vargo)
-* update gem 'zurb-foundation' from 3.0.2 to 3.0.3
+* update gem 'zurb-foundation' from 3.0.2 to 3.0.5
+* update gem 'rspec-rails' from 2.10.1 to 2.11.0
 
 h2. 1.5.4 July 3, 2012
 
